--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -22,7 +22,10 @@
     }
   }
 }
-.form-group {position:relative;}
+.form-group {position:relative;
+  .form-alias {display:inline-block; height:30px; width:1px; margin-left:-1px; vertical-align:middle;}
+  input[type=file] {display:inline-block; vertical-align:middle;}
+}
 
 .btn-simple {padding-top:5px; padding-bottom:3px; border-width:0; line-height:1em; border-radius:100px;}
 .btn-large {padding-top:10px; padding-bottom:8px; padding-left:20px; padding-right:20px;}
