--- a/app/views/triggers/index.html.erb
+++ b/app/views/triggers/index.html.erb
@@ -1,27 +1,39 @@
-<h1>Listing triggers</h1>
+<%= render 'shared/section_title', title: 'Triggers' %>
+<div class="container kmSection">
+  <div class="row">
+    <div class="col-md-12">
+      <table class="table">
+        <thead>
+        <tr>
+          <th class="text-center minimal">Bubble</th>
+          <th class="text-center">Bubble group</th>
+          <th></th>
+        </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Bubble</th>
-      <th>Bubble Group</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <tbody>
+        <% @triggers.each do |trigger| %>
+          <tr>
+            <td class="text-center minimal"><%= link_to trigger.bubble.try(:name), trigger.bubble %></td>
+            <td class="text-center"><%= link_to trigger.bubble_group.try(:name), trigger.bubble_group %></td>
+            <td class="actions minimal">
+              <%= link_to 'View', trigger, class: 'btn btn-info btn-simple btn-narrow' %>
+              <%= link_to 'Edit', edit_trigger_path(trigger), class: 'btn btn-warning btn-simple btn-narrow' %>
+              <%= link_to 'Delete', trigger, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-narrow' %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-  <tbody>
-    <% @triggers.each do |trigger| %>
-      <tr>
-        <td><%= link_to trigger.bubble.try(:name), trigger.bubble %></td>
-        <td><%= link_to trigger.bubble_group.try(:name), trigger.bubble_group %></td>
-        <td><%= link_to 'Show', trigger %></td>
-        <td><%= link_to 'Edit', edit_trigger_path(trigger) %></td>
-        <td><%= link_to 'Destroy', trigger, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Trigger', new_trigger_path %>
+  <div class="row actions text-right">
+    <div class="col-md-12">
+      <%= link_to new_trigger_path, class: 'btn btn-warning btn-simple btn-large' do %>
+        <i class="fa fa-plus"></i>
+        <span>New Trigger</span>
+      <% end %>
+    </div>
+  </div>
+</div>
