--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -150,3 +150,4 @@ label.accessToken{margin-left: -12px}
 .confPasswordGroup{
   margin-top: -20px;
 }
+.resetForm .control-label{text-align:right !important;}
