--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Forgot your password?</h2>
+<div id="kmLoginPage">
+  <div class="tab-content container">
+    <div class="tab-pane fade in active" id="login_form">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {class:'form-horizontal', method: :post}) do |f| %>
+        <div class="row">
+          <%= devise_error_messages! %>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="form-group">
+              <%= f.label :email, class: 'col-sm-4 control-label' %>
+              <div class="col-sm-8">
+                <%= f.email_field :email, class: 'form-control', placeholder: 'E-mail', autofocus: true %>
+              </div>
+            </div>
+          </div>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+        <div class="row text-right">
+          <div class="col-md-6 col-md-offset-3">
+            <%= f.submit "Send me reset password instructions", class: 'btn btn-info btn-large btn-wide btn-simple' %>
+          </div>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+      <% end %>
+    </div>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
