#90 - HTML/CSS markup for page Edit Profile for all users

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -144,3 +144,6 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
 .errored{color: #FF0000;}
 .pagination{display:block; text-align:center;}
 label.accessToken{margin-left: -12px}
+.confPassword{
+  margin-top: 20px;
+}
