--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -145,5 +145,8 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
 .pagination{display:block; text-align:center;}
 label.accessToken{margin-left: -12px}
 .confPassword{
-  margin-top: 20px;
+  margin-top: 15px;
+}
+.confPasswordGroup{
+  margin-top: -20px;
 }
